完全重写：基于上游源码的 USB Audio Offload 真实架构
修复 GitHub issue #66 指出的两个致命技术错误：

1. AFE 路径假设错误
   - 初版错误假设 USB offload 走 AFE 数据路径
   - 实际上走 QMI + XHCI Sideband 路径
   - qc_audio_offload.c 驱动通过 xhci_sideband API 让 ADSP 直接操作 USB

2. Dynamic Resampler 固件限制
   - libdynamic_resampler.a 只有 ARM32 版本
   - 在 QCS6490 (AArch64) 平台上无法链接使用

重写内容：
- 8 篇技术文档（新增 QMI 和 Sideband 专题）
- 基于真实驱动的内核配置和设备树
- 移除不可行的 M4 拓扑配置
- 更新测试脚本和配置示例

所有文档基于以下上游源码逐行分析：
- sound/usb/qcom/qc_audio_offload.c
- sound/soc/qcom/qdsp6/q6usb.c
- drivers/usb/host/xhci-sideband.c
- sound/soc/qcom/qdsp6/q6afe-dai.c
- sound/soc/qcom/qdsp6/q6afe.c

--- a/examples/alsa-configs/usb-offload.conf
+++ b/examples/alsa-configs/usb-offload.conf
@@ -1,130 +1,242 @@
 # ============================================
 # ALSA UCM 配置 - USB Audio Offload
 # ============================================
-# Use Case Manager (UCM) 配置文件
-# 用于自动配置 USB Audio Offload 设备
+# 基于上游内核真实架构编写
+# 适用于 QCS6490 + Linux 6.8+
 #
-# 位置: /usr/share/alsa/ucm2/qcom/qcs6490/usb-offload.conf
+# 位置: /usr/share/alsa/ucm2/qcom/qcs6490-usb-offload/
+#       或 /usr/share/alsa/ucm2/conf.d/qcs6490/usb-offload.conf
 #
 # 使用方法:
-#   alsaucm -c qcs6490 set _verb HiFi
-#   alsaucm -c qcs6490 set _enadev Speaker
+#   alsaucm -c qcs6490-usb-offload set _verb HiFi
+#   alsaucm -c qcs6490-usb-offload set _enadev Speaker
+#
+# 重要说明:
+#   USB Audio Offload 的控制名称（cset）需要根据实际驱动调整
+#   q6usb 驱动可能不提供传统的 ALSA 控制接口
+#   大部分配置通过 QMI 消息自动完成
 
 Syntax 4
 
 # ============================================
 # 声卡定义
 # ============================================
+Comment "QCS6490 USB Audio Offload"
+
+# 声卡名称需要与实际的 ASoC card 名称匹配
+# 检查方法: cat /proc/asound/cards
+If.card_name {
+	Condition {
+		Type String
+		Haystack "${CardName}"
+		Needle "qcs6490"
+	}
+	True {
+		Comment "QCS6490 USB Offload Card"
+	}
+}
+
+# ============================================
+# HiFi 用例
+# ============================================
 SectionUseCase."HiFi" {
-    File "HiFi.conf"
-    Comment "高保真音频播放"
+	Comment "高保真音频播放和录制"
+
+	File "HiFi.conf"
+
+	# 启用序列
+	# 注意: q6usb 驱动可能不提供这些控制
+	# 这些是示例，需要根据实际驱动调整
+	EnableSequence [
+		# 启用 USB offload 路径
+		# cset "name='USB Offload Playback Switch' on"
+		# cset "name='USB Offload Capture Switch' on"
+	]
+
+	DisableSequence [
+		# 禁用 USB offload 路径
+		# cset "name='USB Offload Playback Switch' off"
+		# cset "name='USB Offload Capture Switch' off"
+	]
 }
 
 # ============================================
-# HiFi 用例配置
-# ============================================
-SectionVerb {
-    Value {
-        TQ "HiFi"
-    }
-    
-    EnableSequence [
-        # 启用 USB offload 路由
-        cset "name='USB Offload Switch' on"
-        cset "name='USB Playback Volume' 80%"
-    ]
-    
-    DisableSequence [
-        # 禁用 USB offload 路由
-        cset "name='USB Offload Switch' off"
-    ]
-}
-
-# ============================================
-# 设备定义 - USB 扬声器
+# 设备定义 - USB 播放
 # ============================================
 SectionDevice."Speaker" {
-    Comment "USB 音频输出"
-    
-    Value {
-        PlaybackPCM "hw:${CardId},0"
-        PlaybackChannels 2
-        PlaybackPriority 100
-    }
-    
-    EnableSequence [
-        cset "name='USB Playback Switch' on"
-        cset "name='USB Playback Volume' 80%"
-    ]
-    
-    DisableSequence [
-        cset "name='USB Playback Switch' off"
-    ]
+	Comment "USB 音频输出设备"
+
+	Value {
+		# PCM 设备需要根据实际情况调整
+		# 检查方法: cat /proc/asound/pcm
+		# 查找包含 "USB" 或 "q6usb" 的设备
+		PlaybackPCM "hw:${CardId},0"
+		PlaybackChannels 2
+		PlaybackPriority 100
+
+		# 支持的采样率
+		# USB offload 支持的采样率由 USB 设备和 ADSP 固件决定
+		PlaybackRate [8000 16000 32000 44100 48000 96000 192000]
+
+		# 支持的格式
+		PlaybackFormats [S16_LE S24_LE S32_LE]
+	}
+
+	EnableSequence [
+		# USB 播放设备启用
+		# 注意: 实际控制可能不存在，由驱动自动管理
+		# cset "name='USB Playback Switch' on"
+		# cset "name='USB Playback Volume' 80%"
+	]
+
+	DisableSequence [
+		# USB 播放设备禁用
+		# cset "name='USB Playback Switch' off"
+	]
+
+	ConflictingDevice [
+		"Headphones"
+		"HDMI"
+	]
 }
 
 # ============================================
-# 设备定义 - USB 麦克风
+# 设备定义 - USB 录制
 # ============================================
 SectionDevice."Mic" {
-    Comment "USB 音频输入"
-    
-    Value {
-        CapturePCM "hw:${CardId},0"
-        CaptureChannels 2
-        CapturePriority 100
-    }
-    
-    EnableSequence [
-        cset "name='USB Capture Switch' on"
-        cset "name='USB Capture Volume' 80%"
-    ]
-    
-    DisableSequence [
-        cset "name='USB Capture Switch' off"
-    ]
+	Comment "USB 音频输入设备"
+
+	Value {
+		# PCM 设备需要根据实际情况调整
+		CapturePCM "hw:${CardId},0"
+		CaptureChannels 2
+		CapturePriority 100
+
+		# 支持的采样率
+		CaptureRate [8000 16000 32000 44100 48000 96000 192000]
+
+		# 支持的格式
+		CaptureFormats [S16_LE S24_LE S32_LE]
+	}
+
+	EnableSequence [
+		# USB 录制设备启用
+		# cset "name='USB Capture Switch' on"
+		# cset "name='USB Capture Volume' 80%"
+	]
+
+	DisableSequence [
+		# USB 录制设备禁用
+		# cset "name='USB Capture Switch' off"
+	]
+
+	ConflictingDevice [
+		"DigitalMic"
+		"AnalogMic"
+	]
 }
 
 # ============================================
-# 修饰符 - 低延迟模式
+# 修饰符 - 低延迟模式（可选）
 # ============================================
 SectionModifier."LowLatency" {
-    Comment "低延迟音频模式"
-    
-    EnableSequence [
-        cset "name='USB Offload Latency Mode' Low"
-    ]
-    
-    DisableSequence [
-        cset "name='USB Offload Latency Mode' Normal"
-    ]
+	Comment "低延迟音频模式"
+
+	SupportedDevice [
+		"Speaker"
+		"Mic"
+	]
+
+	EnableSequence [
+		# 低延迟模式配置
+		# 注意: 这些控制可能不存在
+		# USB offload 的延迟主要由 ADSP 固件和 USB 设备决定
+		# cset "name='USB Offload Latency Mode' Low"
+	]
+
+	DisableSequence [
+		# cset "name='USB Offload Latency Mode' Normal"
+	]
 }
 
 # ============================================
-# 修饰符 - 高质量模式
-# ============================================
-SectionModifier."HighQuality" {
-    Comment "高质量音频模式"
-    
-    EnableSequence [
-        cset "name='USB Offload Quality Mode' High"
-    ]
-    
-    DisableSequence [
-        cset "name='USB Offload Quality Mode' Normal"
-    ]
-}
-
-# ============================================
-# 冲突定义
+# 默认配置
 # ============================================
 SectionDefaults [
-    cdev "hw:qcs6490"
+	# 默认声卡设备
+	cdev "hw:${CardId}"
+
+	# 默认 PCM 设备
+	# pcm "hw:${CardId},0"
 ]
 
 # ============================================
-# 注释说明
+# 使用说明
 # ============================================
-# 1. 控制名称 (cset) 需要根据实际驱动调整
-# 2. PCM 设备号需要根据系统配置修改
-# 3. 音量值范围: 0-100%
-# 4. 优先级值越高，优先级越高
+#
+# 1. 确定声卡名称和设备号
+#    cat /proc/asound/cards
+#    cat /proc/asound/pcm
+#
+# 2. 查看可用的 ALSA 控制
+#    amixer -c <card_id> controls
+#    amixer -c <card_id> contents
+#
+# 3. 测试 PCM 设备
+#    aplay -D hw:<card_id>,<device_id> -l
+#    speaker-test -D hw:<card_id>,<device_id> -c 2 -r 48000
+#
+# 4. 使用 UCM
+#    alsaucm -c qcs6490-usb-offload list _verbs
+#    alsaucm -c qcs6490-usb-offload list _devices/HiFi
+#    alsaucm -c qcs6490-usb-offload set _verb HiFi
+#    alsaucm -c qcs6490-usb-offload set _enadev Speaker
+#
+# 5. 调试 UCM
+#    export LIBASOUND_DEBUG=1
+#    alsaucm -c qcs6490-usb-offload set _verb HiFi
+#
+# ============================================
+# 重要提示
+# ============================================
+#
+# 1. USB Audio Offload 的特殊性
+#    - 数据路径通过 QMI + XHCI sideband，不走传统 ALSA 路径
+#    - 大部分配置由 ADSP 固件自动完成
+#    - 可能没有传统的 ALSA 控制接口（mixer controls）
+#
+# 2. 控制名称
+#    - 本配置中的控制名称（cset）是示例
+#    - 实际的控制名称需要通过 amixer 查看
+#    - q6usb 驱动可能不提供任何控制，全部由驱动自动管理
+#
+# 3. PCM 设备
+#    - PCM 设备号需要根据实际系统配置
+#    - 可能有多个 PCM 设备（playback、capture、offload）
+#    - 使用 cat /proc/asound/pcm 查看所有设备
+#
+# 4. 采样率和格式
+#    - 支持的采样率和格式由 USB 设备决定
+#    - ADSP 固件可能支持自动采样率转换
+#    - 使用 aplay -D hw:X,Y --dump-hw-params 查看支持的参数
+#
+# 5. 与传统 USB Audio 的区别
+#    - 传统 USB Audio: snd-usb-audio 驱动，CPU 处理
+#    - USB Offload: q6usb + QMI + sideband，ADSP 处理
+#    - Offload 模式下 CPU 占用更低，功耗更低
+#
+# 6. Fallback 机制
+#    - 如果 USB offload 不可用，系统会自动使用传统 USB Audio
+#    - 检查方法: lsmod | grep snd_usb_audio
+#
+# 7. 多声道支持
+#    - USB offload 支持多声道（5.1、7.1）取决于 USB 设备和固件
+#    - 需要在 PlaybackChannels 中配置正确的声道数
+#
+# 8. 故障排查
+#    - 如果 UCM 配置不生效，检查声卡名称是否匹配
+#    - 如果没有声音，检查 PCM 设备号是否正确
+#    - 如果控制不存在，注释掉相关的 cset 命令
+#    - 查看内核日志: dmesg | grep -iE "usb.*audio|q6usb"
+#
+# ============================================
