--- a/kernel/config/usb_audio_offload.config
+++ b/kernel/config/usb_audio_offload.config
@@ -1,164 +1,193 @@
 # ============================================
 # QCS6490 USB Audio Offload 内核配置
 # ============================================
+# 基于上游内核真实架构编写
+# 适用于 Linux 6.8+ 内核
+#
 # 使用方法:
-#   ./scripts/kconfig/merge_config.sh arch/arm64/configs/qcs6490_defconfig \
+#   cd <kernel-source>
+#   ./scripts/kconfig/merge_config.sh \
+#       arch/arm64/configs/qcs6490_defconfig \
 #       usb_audio_offload.config
+#   make olddefconfig
+#   make -j$(nproc)
 # ============================================
 
-# --- Qualcomm 平台基础 ---
-# Qualcomm SoC 架构支持
-CONFIG_ARCH_QCOM=y
+# ============================================
+# USB Audio 基础支持
+# ============================================
 
-# Remoteproc 框架 - 用于加载和管理 DSP 固件
-CONFIG_REMOTEPROC=y
-CONFIG_QCOM_RPROC_COMMON=y
-CONFIG_QCOM_Q6V5_COMMON=y
-CONFIG_QCOM_Q6V5_ADSP=y
-CONFIG_QCOM_Q6V5_PAS=y
-
-# SMEM - 共享内存接口
-CONFIG_QCOM_SMEM=y
-CONFIG_QCOM_SMP2P=y
-CONFIG_QCOM_SMSM=y
-
-# --- 通信层 ---
-# GLINK - Qualcomm 进程间通信
-CONFIG_RPMSG=y
-CONFIG_RPMSG_QCOM_GLINK=y
-CONFIG_RPMSG_QCOM_GLINK_RPM=y
-CONFIG_RPMSG_QCOM_GLINK_SMEM=y
-
-# APR/GPR - 音频路由协议
-CONFIG_QCOM_APR=y
-CONFIG_QCOM_GPR=y
-
-# QMI - Qualcomm MSM Interface (用于 USB offload 控制)
-CONFIG_QCOM_QMI_HELPERS=y
-
-# --- AudioReach 框架 ---
-# ALSA SoC 核心
-CONFIG_SOUND=y
-CONFIG_SND=y
-CONFIG_SND_SOC=y
-
-# Qualcomm QDSP6 音频子系统
-CONFIG_SND_SOC_QCOM=y
-CONFIG_SND_SOC_QDSP6=y
-
-# AudioReach 核心组件
-CONFIG_SND_SOC_QDSP6_CORE=y
-CONFIG_SND_SOC_QDSP6_APM=y
-CONFIG_SND_SOC_QDSP6_PRM=y
-CONFIG_SND_SOC_QDSP6_AFE=y
-CONFIG_SND_SOC_QDSP6_AFE_DAI=y
-CONFIG_SND_SOC_QDSP6_AFE_CLOCKS=y
-
-# AudioReach DAI 驱动
-CONFIG_SND_SOC_QDSP6_Q6APM_DAI=y
-CONFIG_SND_SOC_QDSP6_Q6APM_LPASS_DAI=y
-
-# --- USB Audio Offload 核心 ---
-# Q6USB - ADSP USB 音频前端
-CONFIG_SND_SOC_QDSP6_Q6USB=y
-
-# USB Audio QMI - 用于 ADSP 和 USB 驱动通信
-CONFIG_SND_USB_AUDIO_QMI=y
-
-# SoC USB 框架 - 连接 ALSA 和 USB 子系统
-CONFIG_SND_SOC_USB=y
-
-# XHCI Sideband - 允许 ADSP 直接访问 USB 端点
-CONFIG_USB_XHCI_SIDEBAND=y
-
-# --- USB 子系统 ---
 # USB 核心支持
 CONFIG_USB_SUPPORT=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 # XHCI (USB 3.0) 主机控制器
+# QCS6490 使用 DWC3 控制器，需要 XHCI 支持
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 
-# DWC3 USB 控制器 (Qualcomm 使用)
+# DWC3 USB 控制器 (Qualcomm 平台)
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_HOST=y
 CONFIG_USB_DWC3_QCOM=y
 
-# USB Audio Class 驱动 (传统路径，作为 fallback)
-CONFIG_SND_USB_AUDIO=y
+# USB Audio Class 驱动
+# 作为 fallback，当 offload 不可用时使用传统路径
+CONFIG_SND_USB_AUDIO=m
 
-# --- IOMMU 支持 ---
-# IOMMU 框架 - 用于 ADSP 访问 USB 内存
+# ============================================
+# XHCI Sideband 支持（关键）
+# ============================================
+
+# XHCI Sideband API
+# 允许 ADSP 通过 sideband 接口直接访问 USB transfer ring
+# 这是 USB offload 的核心机制
+CONFIG_USB_XHCI_SIDEBAND=y
+
+# ============================================
+# Qualcomm 平台基础
+# ============================================
+
+# Qualcomm SoC 架构
+CONFIG_ARCH_QCOM=y
+
+# Remoteproc 框架
+# 用于加载和管理 ADSP 固件
+CONFIG_REMOTEPROC=y
+CONFIG_QCOM_RPROC_COMMON=m
+CONFIG_QCOM_Q6V5_COMMON=m
+CONFIG_QCOM_Q6V5_ADSP=m
+CONFIG_QCOM_Q6V5_PAS=m
+
+# SMEM - 共享内存接口
+# ADSP 和 APPS 之间的共享内存通信
+CONFIG_QCOM_SMEM=y
+CONFIG_QCOM_SMP2P=y
+CONFIG_QCOM_SMSM=y
+
+# ============================================
+# 通信层
+# ============================================
+
+# GLINK - Qualcomm 进程间通信
+# ADSP 和 APPS 之间的消息传递
+CONFIG_RPMSG=y
+CONFIG_RPMSG_QCOM_GLINK=y
+CONFIG_RPMSG_QCOM_GLINK_RPM=y
+CONFIG_RPMSG_QCOM_GLINK_SMEM=y
+
+# GPR - Generic Packet Router
+# AudioReach 使用的通信协议
+CONFIG_QCOM_GPR=m
+
+# QMI - Qualcomm MSM Interface（关键）
+# USB offload 使用 QMI 协议与 ADSP 通信
+CONFIG_QCOM_QMI_HELPERS=m
+
+# ============================================
+# ALSA 和 ASoC 核心
+# ============================================
+
+CONFIG_SOUND=y
+CONFIG_SND=y
+CONFIG_SND_SOC=y
+
+# ============================================
+# Qualcomm QDSP6 音频子系统
+# ============================================
+
+# QDSP6 ASoC 平台驱动
+CONFIG_SND_SOC_QCOM=m
+CONFIG_SND_SOC_QDSP6=m
+
+# QDSP6 核心组件
+CONFIG_SND_SOC_QDSP6_CORE=m
+CONFIG_SND_SOC_QDSP6_APM=m
+CONFIG_SND_SOC_QDSP6_PRM=m
+
+# AFE (Audio Front End)
+# 提供硬件接口抽象，包括 USB 端口定义
+CONFIG_SND_SOC_QDSP6_AFE=m
+CONFIG_SND_SOC_QDSP6_AFE_DAI=m
+CONFIG_SND_SOC_QDSP6_AFE_CLOCKS=m
+
+# APM DAI 驱动
+# 提供用户空间可见的 PCM 设备
+CONFIG_SND_SOC_QDSP6_Q6APM_DAI=m
+CONFIG_SND_SOC_QDSP6_Q6APM_LPASS_DAI=m
+
+# ============================================
+# USB Audio Offload 核心模块（关键）
+# ============================================
+
+# Q6USB - ADSP USB 音频前端
+# 注册 ASoC component，创建 auxiliary device
+# 源码: sound/soc/qcom/qdsp6/q6usb.c
+CONFIG_SND_SOC_QDSP6_Q6USB=m
+
+# USB Audio QMI 服务
+# 通过 QMI 与 ADSP 通信，传递 USB 设备信息和控制命令
+# 源码: sound/usb/qcom/usb_audio_qmi_v01.c
+CONFIG_SND_USB_AUDIO_QMI=m
+
+# SoC USB 框架
+# 连接 ALSA 和 USB 子系统，协调 offload 和传统路径
+# 源码: sound/soc/soc-usb.c
+CONFIG_SND_SOC_USB=m
+
+# Qualcomm USB Audio Offload 驱动
+# Auxiliary driver，桥接 QMI 和 XHCI sideband
+# 源码: sound/usb/qcom/qc_audio_offload.c
+# 注意：这个配置选项可能在某些内核版本中不存在
+# 如果不存在，功能可能集成在 SND_USB_AUDIO_QMI 中
+# CONFIG_QC_USB_AUDIO_OFFLOAD=m
+
+# ============================================
+# IOMMU 支持（关键）
+# ============================================
+
+# IOMMU 框架
+# ADSP 需要通过 IOMMU 访问 USB 控制器的内存
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_IOMMU_API=y
+
+# ARM SMMU (System MMU)
 CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_V3=y
+
+# Qualcomm IOMMU
 CONFIG_QCOM_IOMMU=y
 
-# DMA 映射
+# DMA 支持
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_DMA_CMA=y
 
-# --- 设备树支持 ---
+# ============================================
+# 设备树支持
+# ============================================
+
 CONFIG_OF=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_OF_ADDRESS=y
+CONFIG_OF_IRQ=y
 
-# --- 固件加载 ---
+# ============================================
+# 固件加载
+# ============================================
+
 CONFIG_FW_LOADER=y
 CONFIG_FW_LOADER_USER_HELPER=y
-CONFIG_EXTRA_FIRMWARE=""
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 
-# --- 调试选项 (开发时启用) ---
-# 动态调试 - 运行时控制日志级别
-# CONFIG_DYNAMIC_DEBUG=y
+# 固件路径（可选）
+# CONFIG_EXTRA_FIRMWARE="qcom/qcs6490/adsp.mbn"
+# CONFIG_EXTRA_FIRMWARE_DIR="/lib/firmware"
 
-# QDSP6 调试
-# CONFIG_SND_SOC_QDSP6_DEBUG=y
+# ============================================
+# 其他依赖
+# ============================================
 
-# USB 调试
-# CONFIG_USB_DEBUG=y
-# CONFIG_USB_XHCI_HCD_DEBUGGING=y
-
-# Remoteproc 调试
-# CONFIG_REMOTEPROC_CDEV=y
-
-# IOMMU 调试
-# CONFIG_IOMMU_DEBUG=y
-# CONFIG_IOMMU_DEBUGFS=y
-
-# Debugfs 文件系统
-CONFIG_DEBUG_FS=y
-
-# Tracing 支持
-CONFIG_FTRACE=y
-CONFIG_FUNCTION_TRACER=y
-CONFIG_DYNAMIC_FTRACE=y
-
-# --- 性能优化 ---
-# 高分辨率定时器 - 降低音频延迟
-CONFIG_HIGH_RES_TIMERS=y
-CONFIG_NO_HZ_FULL=y
-
-# CPU 频率调节
-CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-
-# CPU 空闲管理
-CONFIG_CPU_IDLE=y
-CONFIG_ARM_CPUIDLE=y
-
-# --- 电源管理 ---
-CONFIG_PM=y
-CONFIG_PM_SLEEP=y
-CONFIG_PM_RUNTIME=y
-CONFIG_PM_GENERIC_DOMAINS=y
-CONFIG_QCOM_RPM_MASTER_STATS=y
-
-# --- 其他依赖 ---
 # Regmap - 寄存器访问抽象层
 CONFIG_REGMAP=y
 CONFIG_REGMAP_MMIO=y
@@ -175,31 +204,122 @@ CONFIG_PINCTRL_QCOM=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_V3=y
 
+# 电源管理
+CONFIG_PM=y
+CONFIG_PM_SLEEP=y
+CONFIG_PM_RUNTIME=y
+CONFIG_PM_GENERIC_DOMAINS=y
+
+# ============================================
+# 调试选项（开发时启用）
+# ============================================
+
+# Debugfs 文件系统
+# 用于查看驱动状态和调试信息
+CONFIG_DEBUG_FS=y
+
+# 动态调试
+# 运行时控制日志级别
+# echo "file q6usb.c +p" > /sys/kernel/debug/dynamic_debug/control
+# CONFIG_DYNAMIC_DEBUG=y
+
+# USB 调试
+# CONFIG_USB_DEBUG=y
+# CONFIG_USB_XHCI_HCD_DEBUGGING=y
+
+# Remoteproc 调试
+# CONFIG_REMOTEPROC_CDEV=y
+
+# IOMMU 调试
+# CONFIG_IOMMU_DEBUG=y
+# CONFIG_IOMMU_DEBUGFS=y
+
+# ASoC 调试
+# CONFIG_SND_SOC_TRACE=y
+
+# Tracing 支持
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
+CONFIG_DYNAMIC_FTRACE=y
+
+# ============================================
+# 性能优化
+# ============================================
+
+# 高分辨率定时器
+# 降低音频延迟
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_NO_HZ_FULL=y
+
+# CPU 频率调节
+CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+
+# CPU 空闲管理
+CONFIG_CPU_IDLE=y
+CONFIG_ARM_CPUIDLE=y
+
 # ============================================
 # 可选功能
 # ============================================
 
-# --- 多声道支持 ---
-# 支持 5.1/7.1 环绕声
-CONFIG_SND_PCM_OSS=y
-CONFIG_SND_MIXER_OSS=y
+# ALSA 拓扑
+# 用于动态音频拓扑配置（主要用于 codec 路径）
+CONFIG_SND_SOC_TOPOLOGY=y
 
-# --- 压缩音频 ---
+# 压缩音频
 # 支持 MP3/AAC 等压缩格式的硬件解码
 # CONFIG_SND_COMPRESS_OFFLOAD=y
 
-# --- ALSA 拓扑 ---
-# 动态音频拓扑配置
-CONFIG_SND_SOC_TOPOLOGY=y
-
-# --- 音频效果 ---
-# DSP 音频效果处理
-# CONFIG_SND_SOC_QDSP6_EFFECTS=y
-
 # ============================================
-# 注意事项
+# 重要说明
 # ============================================
-# 1. 确保 ADSP 固件文件存在于 /lib/firmware/qcom/qcs6490/
-# 2. 设备树必须正确配置 USB sideband 和 IOMMU
-# 3. 某些选项可能需要专有固件或驱动
-# 4. 调试选项会增加内核大小和降低性能，生产环境应禁用
+#
+# 1. 模块加载顺序
+#    - remoteproc (加载 ADSP 固件)
+#    - qcom_q6v5_adsp
+#    - snd-soc-qdsp6-core
+#    - snd-soc-q6usb
+#    - snd-usb-audio-qmi
+#    - xhci-sideband
+#
+# 2. 固件文件
+#    确保以下文件存在:
+#    /lib/firmware/qcom/qcs6490/adsp.mbn
+#
+# 3. 设备树配置
+#    必须正确配置:
+#    - ADSP remoteproc 节点
+#    - USB XHCI 控制器节点（带 sideband 支持）
+#    - q6usb 节点（在 ADSP 子节点下）
+#    - IOMMU stream ID 配置
+#
+# 4. 内核版本要求
+#    - Linux 6.8+: 完整的 USB offload 支持
+#    - Linux 6.6-6.7: 部分支持，可能需要补丁
+#    - Linux 6.5-: 不支持，需要大量 backport
+#
+# 5. 架构限制
+#    - 仅支持 ARM64
+#    - 不支持 ARM32（Dynamic Resampler 固件限制）
+#
+# 6. 调试方法
+#    # 检查模块加载
+#    lsmod | grep -E "q6usb|qmi|sideband"
+#
+#    # 检查 auxiliary device
+#    ls /sys/bus/auxiliary/devices/
+#
+#    # 检查 QMI 服务
+#    ls /sys/kernel/debug/qmi/
+#
+#    # 检查 ADSP 状态
+#    cat /sys/class/remoteproc/remoteproc*/state
+#
+#    # 检查 ASoC 设备
+#    cat /proc/asound/cards
+#    cat /proc/asound/pcm
+#
+# ============================================
